hazel-ui/src/ui/widgets/engine_io_section/snapshots/hazel__ui__widgets__engine_io_section__tests__accepts_input.snap
---
source: src/ui/widgets/engine_io_section/mod.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 64, height: 17 },
    content: [
        "┌──────────────────────────────────────────────────────────────┐",
        "│                                                              │",
        "│                                                              │",
        "│                                                              │",
        "│                                                              │",
        "│                                                              │",
        "│                                                              │",
        "│                                                              │",
        "│                                                              │",
        "│                                                              │",
        "│                                                              │",
        "│                                                              │",
        "│                                                              │",
        "│                                                              │",
        "│                                                              │",
        "└──────────────────────────────────────────────────────────────┘",
        "$> abcdefg                                                      ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Black, underline: Reset, modifier: NONE,
    ]
}
