hazel-ui/src/ui/widgets/engine_io_section/snapshots/hazel__ui__widgets__engine_io_section__tests__renders_as_expected.snap
---
source: src/ui/widgets/engine_io_section/mod.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 64, height: 17 },
    content: [
        "┌──────────────────────────────────────────────────────────────┐",
        "│                                                              │",
        "│                                                              │",
        "│                                                              │",
        "│                                                              │",
        "│Stockfish 16.1 by the Stockfish developers (see AUTHORS file) │",
        "│> isready                                                     │",
        "│readyok                                                       │",
        "│> position startpos moves                                     │",
        "│> go depth 1                                                  │",
        "│info string NNUE evaluation using nn-baff1ede1f90.nnue        │",
        "│info string NNUE evaluation using nn-b1a57edbea57.nnue        │",
        "│info depth 1 seldepth 2 multipv 1 score cp 0 nodes 20 nps 1000│",
        "│ hashfull 0 tbhits 0 time 20 pv d2d4                          │",
        "│bestmove d2d4                                                 │",
        "└──────────────────────────────────────────────────────────────┘",
        "$>                                                              ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Black, underline: Reset, modifier: NONE,
    ]
}
